[tool.poetry]
name = "masumi-agent"
version = "0.1.0"
description = "Masumi Network Agent Template"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.23"
alembic = "^1.7.1"
pydantic = "^1.8.2"
pydantic-settings = "^2.0.0"
crewai = "^0.1.0"
python-dotenv = "^0.19.0"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 